--- a/package.json
+++ b/package.json
@@ -2,7 +2,24 @@
   "dependencies": {
     "winston": "^3.2.1"
   },
+  "devDependencies": {
+    "@types/express": "^4.17.2",
+    "@types/jest": "^24.9.0",
+    "@types/node": "^12.0.2",
+    "jest": "^24.9.0",
+    "terser-webpack-plugin": "^1.2.4",
+    "ts-jest": "^24.3.0",
+    "ts-loader": "^6.0.0",
+    "typescript": "3.4.5",
+    "webpack": "^4.31.0",
+    "webpack-cli": "^3.3.2",
+    "webpack-merge": "^4.2.1",
+    "webpack-node-externals": "^1.7.2"
+  },
   "scripts": {
-    "start": "node app/pizza-restaurant.js"
+    "start": "node app/pizza-restaurant.js",
+    "build": "npm run clean && webpack --config webpack.prod.js",
+    "dev": "npm run clean && webpack --watch --config webpack.dev.js",
+    "clean": "rm -rf ./dist && mkdir ./dist"
   }
 }
