--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ts-jest": "^24.3.0",
     "ts-loader": "^6.0.0",
     "typescript": "3.4.5",
+    "uuid": "^3.3.2",
     "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2",
     "webpack-merge": "^4.2.1",
